# evalseed

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: publish.yml  test.yml
docs/phase0/: README.md
examples/: basic_usage.py
sample_corpus/: irdai_health_insurance.txt  rbi_kyc_master_directions.md
src/evalseed/: __init__.py  cli.py  corpus.py  dataset.py  exceptions.py  generator.py  judges.py  pipeline.py  schemas.py
src/evalseed/filters/: __init__.py  answerability.py  base.py  difficulty.py  faithfulness.py  prefilters.py  triviality.py
tests/: conftest.py  test_corpus.py  test_dataset.py  test_judges.py  test_pipeline.py  test_schemas.py
tests/test_filters/: test_answerability.py  test_difficulty.py  test_faithfulness.py  test_prefilters.py  test_triviality.py
